--- a/manifest.json
+++ b/manifest.json
@@ -2,6 +2,7 @@
   "name": "Skyrim Clicker",
   "short_name": "Skyrim",
   "start_url": "index.html",
+  "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
