--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,13 @@
 {
-  "name": "Skyrim Clicker",
-  "short_name": "Skyrim",
-  "start_url": "index.html",
+  "name": "The Northern Path",
+  "short_name": "Northern Path",
+  "description": "A Skyrim-inspired text RPG you can play in your browser or as an installed app.",
+  "start_url": "./",
   "scope": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#000000",
+  "orientation": "portrait",
   "icons": [
     {
       "src": "icons/icon-192.png",
